# core-wellcome-dev

./: Cargo.toml  README.md  build.rs  core-wellcome.desktop  core-wellcome.gresource.xml  meson.build  postinstall.sh
data/: preferences.json
data/pages/af/: readme  release
data/pages/bg/: involved  readme
data/pages/de/: involved  readme  release
data/pages/de-DE/: involved  readme
data/pages/en/: involved  readme  release
data/pages/es/: involved  readme  release
data/pages/et/: involved  readme  release
data/pages/hu/: involved  readme  release
data/pages/it/: involved
data/pages/nb/: involved  readme  release
data/pages/pl/: involved
data/pages/ru/: involved
i18n/af/: core_wellcome.ftl
i18n/ar/: core_wellcome.ftl
i18n/bg/: core_wellcome.ftl
i18n/by/: core_wellcome.ftl
i18n/ca/: core_wellcome.ftl
i18n/cs/: core_wellcome.ftl
i18n/de/: core_wellcome.ftl
i18n/en/: core_wellcome.ftl
i18n/es/: core_wellcome.ftl
i18n/et/: core_wellcome.ftl
i18n/fr/: core_wellcome.ftl
i18n/he/: core_wellcome.ftl
i18n/hu/: core_wellcome.ftl
i18n/it/: core_wellcome.ftl
i18n/ko-KR/: core_wellcome.ftl
i18n/nb/: core_wellcome.ftl
i18n/nl/: core_wellcome.ftl
i18n/pl/: core_wellcome.ftl
i18n/pt-BR/: core_wellcome.ftl
i18n/ru/: core_wellcome.ftl
i18n/sk/: core_wellcome.ftl
i18n/sq/: core_wellcome.ftl
i18n/sv/: core_wellcome.ftl
i18n/tr/: core_wellcome.ftl
i18n/vi/: core_wellcome.ftl
i18n/zh-CN/: core_wellcome.ftl
src/: actions.rs  application.rs  cli.rs  cli_handler.rs  config.rs  dns.rs  gresource.rs  gui.rs  installer.rs  kwin_dbus.rs  localization.rs  logger.rs  main.rs  meson.build  systemd_units.rs  tweak.rs  ui.rs  utils.rs  window.rs
src/pages/: dns.rs  i18n.rs  mod.rs  tweaks.rs
ui/: core-hello.glade  eos-hello.glade  style.css
(+2 files in other folders)
