[package]
name = "core-wellcome"
version = "0.1.0"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"
edition = "2021"

[dependencies]
alpm = { default-features = false, version = "5" }
alpm-utils = { features = ["conf"], default-features = false, version = "5" }
pacmanconf = "3.1"

subprocess = "0.2"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8", features = ["debug-embed", "include-exclude"] }
gtk = { version = "0.18", default-features = false }
gio = { version = "0.21", default-features = false }
gdk-pixbuf = "0.21"
glib = { default-features = false, version = "0.21" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
unic-langid = "0.9"
phf = { version = "0.13", features = ["macros"], default-features = false }
chwd = { git = "https://github.com/CachyOS/chwd", rev = "595312b31e6dd355c9a8fcd09acde24b7f9c3e3b", version = "1.16.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
which = { version = "8.0", features = ["tracing"] }

anyhow = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1.49", features = ["macros", "sync", "rt-multi-thread"] }
zbus = { version = "5", features = ["tokio"], default-features = false }
zbus_systemd = { version = "0.25900.0", features = ["systemd1"], default-features = false }
clap = { features = ["derive"], version = "4" }
colored = "3"

[build-dependencies]
anyhow = "1"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
